--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
             width: 100%;
         }
         .logo {
-            font-size: 18px;
+            font-size: 20px;
             border: 1px solid #ccc;
             background: linear-gradient(to right, #2c3e50, #4ca1af);
             border-radius: 20px;
@@ -45,7 +45,7 @@
         #search-bar {
             flex: 1;
             margin: 0 12px;
-            padding: 6px;
+            padding: 7px;
             background-color: #f1f1f1;
             border: 2px solid #ccc;
             border-radius: 20px;
@@ -59,25 +59,25 @@
         .tags {
             display: flex;
             gap: 10px;
-            margin-top: 10px;
+            margin-top: 12px;
             overflow-x: auto;
             padding: 8px 0;
             width: 100%;
         }
         .tags .tag {
-            padding: 5px 10px;
+            padding: 5px 15px;
             background-color: #f1f1f1;
             border-radius: 20px;
-            font-size: 14px;
+            font-size: 10px;
             cursor: pointer;
             border: 1px solid #ddd;
         }
         #frames-container {
             margin-top: 120px;
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 5px;
-            padding: 7px;
+            grid-template-columns: repeat(2, 1fr);
+            gap:10px;
+            padding: 6px;
         }
         .frame {
             width: 100%; /* Full width of the grid column */
@@ -90,29 +90,29 @@
 
         .frame img {
             width: 100%;
-            aspect-ratio: 16 / 23;
+            aspect-ratio: 16 / 24;
             object-fit: cover;
-            border-radius: 8px;
+            border-radius: 5px;
         }
 
         .frame .content h2 {
-            font-size: 8px;
+            font-size: 0px;
             text-align: center;
-            margin-top: 5px;
+            margin-top: 0px;
         }
 
         .frame .content button {
             background-color: #FF0000;
             color: #fff;
             border: 1px solid #ccc;
-            padding: 4px 5px;
+            padding: 5px 5px;
             border-radius: 8px;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
             width: 100%;            
-            font-size: 8px;
+            font-size: 9px;
             text-align: center;
         }
 
@@ -145,7 +145,7 @@
             width: 100%;
             height: 100%; /* Adjusted height to leave space for the header */
             max-width: 800px;
-            border-radius: 12px;
+            border-radius: 8px;
             overflow: hidden;
             display: flex;
             flex-direction: column;
@@ -154,7 +154,7 @@
         .nav-header {
             background-color: #333;
             color: #fff;
-            padding: 8px;
+            padding: 5px;
             text-align: right;
             flex-shrink: 0; /* Prevent header from shrinking */
         }
@@ -259,10 +259,10 @@
         <input type="text" id="search-bar" placeholder=" Search..." oninput="handleSearch()" />
     </div>
     <div class="tags">
-        <div class="tag" onclick="filterByTag('America')">America</div>
-        <div class="tag" onclick="filterByTag('Chinese')">Chinese</div>
-        <div class="tag" onclick="filterByTag('Indian')">Indian</div>
-        <div class="tag" onclick="filterByTag('Europe')">Europe</div>
+        <div class="tag" onclick="filterByTag('Audio')">♥️</div>
+        <div class="tag" onclick="filterByTag('Audio')">🎧</div>
+        <div class="tag" onclick="filterByTag('Love')">English</div>
+        <div class="tag" onclick="filterByTag('Love')">Hausa</div>
         <div class="tag" onclick="filterByTag('Africa')">Africa</div>
         <div class="tag" onclick="filterByTag('Japan')">Japan</div>
         <div class="tag" onclick="filterByTag('Australia')">Australia</div>
@@ -286,10 +286,10 @@
 <script>
     const data = [
         {
-            imgUrl: "https://bit.ly/4gCtC1L",
-            videoUrl: "https://www.creativenovels.com.ng/2023/09/mr-romantic-4.html?m=1",
+            imgUrl: "https://bitly.cx/ph6T1",
+            videoUrl: "https://iuptelegram.blogspot.com/2025/02/one.html",
             adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
-            title: "APOCALYPSE 2",
+            title: "TSANTSAR SO",
             tag: "America",
             videoId: "VIDEO_ID_1"            
         },
