--- a/Index.html
+++ b/Index.html
@@ -295,7 +295,7 @@
         },
         {
             imgUrl: "https://bit.ly/4fFLfwd",
-            videoUrl: "https://youtube.com/embed/BAQV7hQdznE",
+            videoUrl: "https://iuptelegram.blogspot.com/2025/02/full-screen-audio-playlist-reset.html",
             adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
             title: "VIKING BATTLE OF HEIRS",
             tag: "Chinese",
