--- a/Index.html
+++ b/Index.html
@@ -37,10 +37,10 @@
             width: 100%;
         }
         .logo {
-            font-size: 18px;
+            font-size: 17px;
             margin: 0 12px;
             border: 1px solid #ccc;
-            background: linear-gradient(to right, #2c3e50, #4ca1af);
+            background: linear-gradient(to right, #004d00, #00b300);
             border-radius: 20px;
             padding: 9px 12px;
             font-weight: bold;
@@ -66,7 +66,7 @@
             color: #333;
         }
         .history-icon:hover {
-            color: #007bff;
+            color: #00b300;
         }
 
         /* History Modal */
@@ -154,7 +154,7 @@
         }
         .clear-history-button {
             width: 100%;
-            background-color: #ff0000;
+            background: linear-gradient(to right, #004d00, #00b300);
             color: #fff;
             border: none;
             padding: 10px;
@@ -163,7 +163,7 @@
             margin-top: 10px;
         }
         .clear-history-button:hover {
-            background-color: #cc0000;
+            background-color: #00b300;
         }
 
         /* Discover Section */
@@ -174,12 +174,12 @@
         .discover-title {
             font-size: 20px;
             font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         .discover-scroll {
             display: flex;
             overflow-x: auto;
-            gap: 10px;
+            gap: 8px;
             padding-bottom: 10px;
         }
         .discover-scroll::-webkit-scrollbar {
@@ -194,7 +194,7 @@
         }
         .discover-item {
             flex: 0 0 auto;
-            width: 156px;
+            width: 120px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -209,43 +209,59 @@
             border-radius: 5px;
         }
         .discover-item .content {
-            padding: 5px;
+            padding: 0px;
         }
         .discover-item .content h2 {
-            font-size: 8px;
+            font-size: 0px;
             margin: 0;
             color: #333;
         }
         .discover-item .content p {
-            font-size: 10px;
+            font-size: 0px;
             color: #777;
-            margin: 5px 0;
+            margin: 0px 0;
         }
+        .discover-item button {
+    background: linear-gradient(to right, #004d00, #00b300);
+    color: #fff;
+    border: 1px solid #ccc;
+    padding: 5px 5px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 9px;
+    text-align: center;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.discover-item button:hover {
+    background-color: #cc0000;
+}
 
         /* Category Section */
         .category-container {
-            margin-top: 10px;
-            padding: 10px;
+            margin-top: 2px;
+            padding: 2px;
         }
         .category-title {
             font-size: 18px;
             font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
         .category-title button {
-            background-color: #333;
-            color: #fff;
+            background-color: #f0f0f0;
             border: none;
             padding: 5px 10px;
-            border-radius: 5px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
             cursor: pointer;
-            font-size: 12px;
+            font-size: 15px;
         }
         .category-title button:hover {
-            background-color: #0056b3;
+            background-color: #f0f0f0;
         }
         .category-scroll {
             display: flex;
@@ -263,9 +279,10 @@
         .category-scroll::-webkit-scrollbar-track {
             background-color: #f1f1f1;
         }
+        
         .frame {
             flex: 0 0 auto;
-            width: 120px;
+            width: 110px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -284,7 +301,7 @@
             margin-top: 0px;
         }
         .frame .content button {
-            background-color: #FF0000;
+            background: linear-gradient(to right, #004d00, #00b300);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -306,7 +323,7 @@
             margin-top: 90px;
             padding: 10px;
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 10px;
         }
         .grid-container .frame {
@@ -401,6 +418,31 @@
                 transform: translate(-50%, -40%);
             }
         }
+        #social-media {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin: 20px 0;
+}
+
+.social-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px; /* Adjust size */
+    height: 35px;
+    border-radius: 50%;
+    background: linear-gradient(to right, #004d00, #00b300);
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    text-decoration: none; /* Prevents default link styling */
+    transition: background-color 0.3s ease; /* Smooth hover effect */
+}
+
+.social-icon:hover {
+    background-color: #555; /* Slightly lighter color on hover */
+}
     </style>
 </head>
 <body>
@@ -424,7 +466,7 @@
 
     <!-- Discover Section -->
     <div class="discover-container" id="discover-container">
-        <div class="discover-title">Discover</div>
+        <div class="discover-title">🔥 Trending</div>
         <div class="discover-scroll" id="discover-scroll"></div>
     </div>
 
@@ -445,6 +487,29 @@
             </div>
         </div>
     </div>
+    
+        <div id="social-media" style="display: flex; justify-content: center; margin-top: 10px;">
+            <a href="https://www.facebook.com/username" target="_blank" class="social-icon">
+                <i class="fab fa-facebook-f fa-circle"></i>
+            </a>
+            <a href="https://twitter.com/username" target="_blank" class="social-icon">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://telegram.me/username" target="_blank" class="social-icon">
+                <i class="fab fa-telegram social-icon"></i>
+            </a>
+            <a href="https://www.instagram.com/username" target="_blank" class="social-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://wa.me/1234567890" target="_blank" class="social-icon">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="https://www.tiktok.com/@username" target="_blank" class="social-icon">
+                <i class="fab fa-tiktok"></i>
+            </a>
+        </div>
+    </div>
+</div>
 
     <script>
         const data = [
@@ -525,7 +590,7 @@
         videoUrl: "https://youtube.com/embed/siFLpeqOWDQ",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "KNIGHT OF THE DEAD",
-        category: "Action",
+        category: "🎧 Audio Novel",
         description: "A knight's battle against the undead.",
     },
     {
@@ -533,7 +598,7 @@
         videoUrl: "https://youtube.com/embed/Ma9xquhYyT0",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "GOATMAN",
-        category: "Horror",
+        category: "Complete",
         description: "A terrifying tale of a mythical creature.",
     }
 ];
@@ -572,14 +637,28 @@ const createDiscoverSection = () => {
             <p>${item.description}</p>
         `;
 
+        // Add the "Watch Ad 🔒" button
+        const button = document.createElement('button');
+        const visited = localStorage.getItem(`${item.title}-ad-visited`);
+        const unlockTime = localStorage.getItem(`${item.title}-unlock-time`);
+        const currentTime = Date.now();
+
+        if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 10000) {
+            button.textContent = 'Read ✅';
+            button.style.backgroundColor = '#00b300';
+            img.onclick = () => openVideoNav(item.videoUrl, item.title);
+            button.onclick = () => openVideoNav(item.videoUrl, item.title);
+        } else {
+            button.textContent = 'Watch Ad 🔒';
+            button.style.backgroundColor = '#ff0000';
+            img.onclick = () => showNotification('Please watch the ad to unlock this video.', 'warning');
+            button.onclick = () => visitAd(item.title, item.adUrl, button);
+        }
+
+        content.appendChild(button);
         discoverItem.appendChild(img);
         discoverItem.appendChild(content);
         discoverScroll.appendChild(discoverItem);
-
-        // Add click event to open video (no ad requirement for Discover section)
-        discoverItem.onclick = () => {
-            openVideoNav(item.videoUrl, item.title);
-        };
     });
 };
 
@@ -596,9 +675,15 @@ const createCategories = () => {
         const categoryTitle = document.createElement('div');
         categoryTitle.className = 'category-title';
         categoryTitle.innerHTML = `
-            <span>${category}</span>
-            <button onclick="showAllVideos('${category}')">More ></button></button>
+            <span>
+                ${category}
+                <i class="fas fa-arrow-right arrow-icon"></i> <!-- Right arrow icon -->
+            </span>
+            <button onclick="showAllVideos('${category}')">View All</button>
         `;
+
+        // Make the entire title clickable
+        categoryTitle.onclick = () => showAllVideos(category);
 
         const categoryScroll = document.createElement('div');
         categoryScroll.className = 'category-scroll';
@@ -636,7 +721,7 @@ const createFrame = (item) => {
 
     if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 10000) {
         button.textContent = 'Read ✅';
-        button.style.backgroundColor = '#4caf50';
+        button.style.backgroundColor = '#00b300';
         img.onclick = () => openVideoNav(item.videoUrl, item.title);
         button.onclick = () => openVideoNav(item.videoUrl, item.title);
     } else {
@@ -659,7 +744,7 @@ const visitAd = (videoId, adUrl, button) => {
     localStorage.setItem(`${videoId}-ad-visited`, true);
     localStorage.setItem(`${videoId}-unlock-time`, unlockTime);
     button.textContent = 'Read ✅';
-    button.style.backgroundColor = '#4caf50';
+    button.style.backgroundColor = '#00b300';
 
     const img = button.closest('.frame').querySelector('img');
     img.onclick = () => openVideoNav(data.find(item => item.title === videoId).videoUrl, videoId);
@@ -723,13 +808,21 @@ const updateHistoryList = () => {
         const currentTime = Date.now();
 
         if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 7200000) {
+            // Video is unlocked
             button.textContent = 'Read ✅';
-            button.style.backgroundColor = '#4caf50';
+            button.style.backgroundColor = '#00b300';
             button.onclick = () => openVideoNav(item.videoUrl, item.title);
+
+            // Add click event to the image to open the video
+            img.onclick = () => openVideoNav(item.videoUrl, item.title);
         } else {
+            // Video is locked
             button.textContent = 'Watch Ad 🔒';
             button.style.backgroundColor = '#ff0000';
             button.onclick = () => visitAd(item.title, item.adUrl, button);
+
+            // Add click event to the image to show a notification
+            img.onclick = () => showNotification('Please Watch the Ad to unlock this Video.', 'warning');
         }
 
         historyItem.appendChild(img);
@@ -765,7 +858,7 @@ const showAllVideos = (category) => {
     backButton.textContent = 'Back to Categories';
     backButton.style.marginBottom = '10px';
     backButton.style.padding = '10px';
-    backButton.style.backgroundColor = '#007bff';
+    backButton.style.backgroundColor = '#00b300';
     backButton.style.color = '#fff';
     backButton.style.border = 'none';
     backButton.style.borderRadius = '5px';
@@ -800,7 +893,7 @@ const handleSearch = () => {
     backButton.textContent = 'Back to Categories';
     backButton.style.marginBottom = '10px';
     backButton.style.padding = '10px';
-    backButton.style.backgroundColor = '#007bff';
+    backButton.style.backgroundColor = '#00b300';
     backButton.style.color = '#fff';
     backButton.style.border = 'none';
     backButton.style.borderRadius = '5px';
