--- a/Index.html
+++ b/Index.html
@@ -37,10 +37,10 @@
             width: 100%;
         }
         .logo {
-            font-size: 18px;
+            font-size: 17px;
             margin: 0 12px;
             border: 1px solid #ccc;
-            background: linear-gradient(to right, #2c3e50, #4ca1af);
+            background: linear-gradient(to right, #004d00, #00b300);
             border-radius: 20px;
             padding: 9px 12px;
             font-weight: bold;
@@ -66,7 +66,7 @@
             color: #333;
         }
         .history-icon:hover {
-            color: #007bff;
+            color: #00b300;
         }
 
         /* History Modal */
@@ -74,7 +74,7 @@
             display: none;
             position: fixed;
             top: 80px;
-            right: 8px;
+            right: 10px;
             width: 320px;
             background-color: #fff;
             border-radius: 8px;
@@ -154,16 +154,16 @@
         }
         .clear-history-button {
             width: 100%;
-            background-color: #ff0000;
+            background: linear-gradient(to right, #004d00, #00b300);
             color: #fff;
             border: none;
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             margin-top: 10px;
         }
         .clear-history-button:hover {
-            background-color: #cc0000;
+            background-color: #00b300;
         }
 
         /* Discover Section */
@@ -179,7 +179,7 @@
         .discover-scroll {
             display: flex;
             overflow-x: auto;
-            gap: 10px;
+            gap: 8px;
             padding-bottom: 10px;
         }
         .discover-scroll::-webkit-scrollbar {
@@ -194,7 +194,7 @@
         }
         .discover-item {
             flex: 0 0 auto;
-            width: 156px;
+            width: 120px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -209,11 +209,11 @@
             border-radius: 5px;
         }
         .discover-item .content {
-            padding: 5px;
+            padding: 0px;
         }
         .discover-item .content h2 {
-            font-size: 8px;
-            margin: 1;
+            font-size: 0px;
+            margin: 0;
             color: #333;
         }
         .discover-item .content p {
@@ -221,6 +221,22 @@
             color: #777;
             margin: 0px 0;
         }
+        .discover-item button {
+    background: linear-gradient(to right, #004d00, #00b300);
+    color: #fff;
+    border: 1px solid #ccc;
+    padding: 5px 5px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 9px;
+    text-align: center;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.discover-item button:hover {
+    background-color: #cc0000;
+}
 
         /* Category Section */
         .category-container {
@@ -236,21 +252,21 @@
             align-items: center;
         }
         .category-title button {
-            background: linear-gradient(to right, #2c3e50, #4ca1af);
-            color: #fff;
+            background-color: #f0f0f0;
             border: none;
             padding: 5px 10px;
-            border-radius: 5px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 15px;
         }
         .category-title button:hover {
-            background-color: #0056b3;
+            background-color: #f0f0f0;
         }
         .category-scroll {
             display: flex;
             overflow-x: auto;
-            gap: 4px;
+            gap: 10px;
             padding-bottom: 10px;
         }
         .category-scroll::-webkit-scrollbar {
@@ -266,7 +282,7 @@
         
         .frame {
             flex: 0 0 auto;
-            width: 120px;
+            width: 110px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -285,7 +301,7 @@
             margin-top: 0px;
         }
         .frame .content button {
-            background-color: #FF0000;
+            background: linear-gradient(to right, #004d00, #00b300);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -402,6 +418,77 @@
                 transform: translate(-50%, -40%);
             }
         }
+        #social-media {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin: 20px 0;
+}
+
+.social-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px; /* Adjust size */
+    height: 35px;
+    border-radius: 50%;
+    background: linear-gradient(to right, #004d00, #00b300);
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    text-decoration: none; /* Prevents default link styling */
+    transition: background-color 0.3s ease; /* Smooth hover effect */
+}
+
+.social-icon:hover {
+    background-color: #555; /* Slightly lighter color on hover */
+}
+.notification-bar {
+            position: fixed;
+            bottom: 80px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
+            max-width: 400px;
+            background: linear-gradient(to right, #004d00, #00b300);
+            color: white;
+            padding: 10px;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+            z-index: 1000;
+        }
+        .notification-bar img {
+            width: 50px;
+            height: 50px;
+            border-radius: 8px;
+            margin-right: 10px;
+        }
+        .notification-text {
+            flex: 1;
+            font-size: 11px;
+            text-align: left;
+        }
+        .notification-button {
+            background: #ccff00;
+            color: #000;
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-weight: bold;
+            cursor: pointer;
+            border: none;
+        }
+        .close-button {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
@@ -412,6 +499,13 @@
             <input type="text" id="search-bar" placeholder=" Search..." oninput="handleSearch()" />
         </div>
     </header>
+    
+    <div class="notification-bar" id="notification-bar">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTslGS8WKA921cWsf4c_xYECCYQoSoToHcjo19yW9d_wXRLBQeU-nEEMwA&s=10" alt="App Logo">
+        <div class="notification-text">Enjoy more unparalleled Novels download Hausa Novels app.</div>
+        <button class="notification-button" onclick="window.open('https://ucarecdn.com/82947fa9-98e5-4948-89ec-8fedd32b4be4/', '_blank')">OPEN</button>
+        <button class="close-button" onclick="closeNotification()">✖</button>
+    </div>
 
     <!-- History Modal -->
     <div class="history-modal" id="history-modal">
@@ -446,6 +540,32 @@
             </div>
         </div>
     </div>
+
+<div id="social-media" style="display: flex; justify-content: center; margin-top: 10px;">
+            <a href="https://www.facebook.com/username" target="_blank" class="social-icon">
+                <i class="fab fa-facebook-f fa-circle"></i>
+            </a>
+            <a href="https://twitter.com/username" target="_blank" class="social-icon">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://telegram.me/username" target="_blank" class="social-icon">
+                <i class="fab fa-telegram social-icon"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UC123456" target="_blank" class="social-icon">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://www.instagram.com/username" target="_blank" class="social-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://wa.me/1234567890" target="_blank" class="social-icon">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="https://www.tiktok.com/@username" target="_blank" class="social-icon">
+                <i class="fab fa-tiktok"></i>
+            </a>
+        </div>
+    </div>
+</div>
 
     <script>
         const data = [
@@ -730,13 +850,21 @@ const updateHistoryList = () => {
         const currentTime = Date.now();
 
         if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 7200000) {
+            // Video is unlocked
             button.textContent = 'Read ✅';
-            button.style.backgroundColor = '#4caf50';
+            button.style.backgroundColor = '#00b300';
             button.onclick = () => openVideoNav(item.videoUrl, item.title);
+
+            // Add click event to the image to open the video
+            img.onclick = () => openVideoNav(item.videoUrl, item.title);
         } else {
+            // Video is locked
             button.textContent = 'Watch Ad 🔒';
             button.style.backgroundColor = '#ff0000';
             button.onclick = () => visitAd(item.title, item.adUrl, button);
+
+            // Add click event to the image to show a notification
+            img.onclick = () => showNotification('Please Watch the Ad to unlock this Video.', 'warning');
         }
 
         historyItem.appendChild(img);
@@ -772,7 +900,7 @@ const showAllVideos = (category) => {
     backButton.textContent = 'Back to Categories';
     backButton.style.marginBottom = '10px';
     backButton.style.padding = '10px';
-    backButton.style.backgroundColor = '#2c3e50';
+    backButton.style.backgroundColor = '#00b300';
     backButton.style.color = '#fff';
     backButton.style.border = 'none';
     backButton.style.borderRadius = '5px';
@@ -807,7 +935,7 @@ const handleSearch = () => {
     backButton.textContent = 'Back to Categories';
     backButton.style.marginBottom = '10px';
     backButton.style.padding = '10px';
-    backButton.style.backgroundColor = '#007bff';
+    backButton.style.backgroundColor = '#00b300';
     backButton.style.color = '#fff';
     backButton.style.border = 'none';
     backButton.style.borderRadius = '5px';
@@ -870,6 +998,14 @@ setInterval(checkAndLockVideos, 800000);
 createDiscoverSection();
 createCategories();
 updateHistoryList();
+
+setTimeout(() => {
+            document.getElementById('notification-bar').style.opacity = '1';
+        }, 400); // Show after 40 seconds
+
+        function closeNotification() {
+            document.getElementById('notification-bar').style.opacity = '0';
+        }
     </script>
 </body>
 </html>
